@@ -50,9 +50,6 @@
     <Color r="1.0" g="0.82" b="0"/>
 </FontString>
 
-These fonts are useless atm -->
-
-<!-- Re-activated this font since it seems to be needed by Wrath of the Lich King -->
 <FontString name="SystemFont" inherits="MasterFont" font="Fonts\FRIZQT__.TTF" virtual="true">
   <FontHeight>
     <AbsValue val="15"/>
@@ -60,6 +57,7 @@ These fonts are useless atm -->
     <Color r="1.0" g="0.82" b="0"/>
 </FontString>
 
+These fonts are useless atm -->
 
 
 <!--  AtlasQuest Inside Atlas/AlphaMap frame -->
@@ -555,7 +553,7 @@ These fonts are useless atm -->
 				</Texture>
 			</Layer>
 			<Layer level="OVERLAY">
-			  <FontString name="QuestName" inherits="SystemFont">
+			  <FontString name="QuestName" inherits="GameFontNormalLarge">
                 <Size>
                   <AbsDimension x="400" y="12"/>
                 </Size>
@@ -603,7 +601,7 @@ These fonts are useless atm -->
                    </Anchor>
                 </Anchors>
                </FontString>
-               <FontString name="StoryTEXT" inherits="SystemFont" justifyH = "LEFT" justifyV = "TOP">
+               <FontString name="StoryTEXT" inherits="GameFontNormalLarge" justifyH = "LEFT" justifyV = "TOP">
                 <Size>
                   <AbsDimension x="410" y="450"/>
                 </Size>
@@ -615,7 +613,7 @@ These fonts are useless atm -->
                    </Anchor>
                 </Anchors>
                </FontString>
-               <FontString name="REWARDstext" inherits="SystemFont" justifyH = "LEFT" justifyV="TOP" >
+               <FontString name="REWARDstext" inherits="GameFontNormalLarge" justifyH = "LEFT" justifyV="TOP" >
                 <Size>
                   <AbsDimension x="400" y="12"/>
                 </Size>
@@ -639,7 +637,7 @@ These fonts are useless atm -->
                    </Anchor>
                 </Anchors>
                </FontString>
-               <FontString name="AQPageCount" inherits="SystemFont" justifyV="TOP">
+               <FontString name="AQPageCount" inherits="GameFontNormalLarge" justifyV="TOP">
                 <Size>
                   <AbsDimension x="50" y="20"/>
                 </Size>
