@@ -15,28 +15,27 @@ Direbrew's Dire Brew (H): http://www.wowhead.com/?quest=12492
 
 AQ40: Mortal Champions: http://www.wowhead.com/?quest=8579
 
-Karazhan: Chamber of Secrets: http://www.wowhead.com/?quest=12616
-
 
 
 
 Wrath of the Lich King
 ======================
 
-Dragonblight:  Azjol-Nerub (5 - 72-74)
-Dragonblight:  Chamber of Aspects: Obsidian Sanctum (10/25 - 80+)
 
-Storm Peaks:  Ulduar: Halls of Stone (5 - 80+)
-Storm Peaks:  Ulduar: Halls of Lightning (5 - 77-79)
 
-Tanaris:  Caverns of Time: Old Stratholme (5 - 80+)
+-- 101 = Caverns of Time: The Culling of Stratholme
+-- 102 = Utgarde Keep: Utgarde Keep
+-- 103 = Utgarde Keep: Utgarde Pinnacle
+-- 104 = Utgarde Keep: ???????
+-- 105 = The Nexus: The Nexus
+-- 106 = The Nexus: The Oculus
+-- 107 = Azjol-Nerub: The Upper Kingdom
+-- 108 = Azjol-Nerub: Ahn'kahet: The Old Kingdom
+-- 109 = Ulduar: Halls of Stone
+-- 110 = Ulduar: Halls of Lightning
+-- 111 = The Obsidian Sanctum
+-- 112 = Grizzly Hills: Drak'Tharon Keep
+-- 113 = Zul'Drak: Gundrak
+-- 114 = The Violet Hold
 
-Coldarra, Borean Tundra:  The Nexus (5 - 71-73)
-
-Grizzly Hills: Drak'Tharon Keep (5 - 74-76)
-
-Zul'Drak:  Gundrak (5 - 76-78)
-
-Utgarde Keep:  Utgarde Pinnacle (5 - 80+)
-Howling Fjord: Utgarde Keep (5 - 70-72)
 
